MDEV-8063: Unconditional ANALYZE DELETE does not delete rows

When detecting a statement that can make use of ha_delete_all_rows(),
we refrained from running the statement when being presented
with the analyze or explain prefix.